home page fixing done

--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -139,16 +139,16 @@
   </div>
 </header>
 
-<section class="page-banner has-button">
-  <div class="sa-slider-wrap">
+<section class="sa-main-slider-wrap">
+  <div class="sa-main-slider-inner">
     <div class="sa-main-slider">
-      <div class="sa-page-banner-controller" style="overflow: hidden;">
-        <div class="sa-page-banner-bg" style="background-image:url(assets/images/sa-banner-page-1-img.png); min-height: 872px">
-          <div class="sa-page-banner-des">
+      <div class="sa-main-slider-item" style="overflow: hidden;">
+        <div class="sa-main-slider-bg" style="background-image:url(assets/images/sa-banner-page-1-img.png); min-height: 872px">
+          <div class="sa-main-slider-des">
             <div class="container">
               <div class="row">
                 <div class="col-sm-12">
-                  <div class="sa-page-banner-des-inner">
+                  <div class="sa-main-slider-des-inner">
                     <strong>The Interface between <br><span class="bsn"><span>Business</span></span> and <span class="scl"><span>Social</span></span> Problems</strong>
                     <a href="#">CREATE ACCOUNT</a>
                   </div>
@@ -158,18 +158,18 @@
           </div>
         </div>
       </div>
-      <div class="sa-page-banner-controller" style="overflow: hidden;">
-        <div class="sa-page-banner-bg" style="background-image:url(assets/images/sa-banner-page-2-img.png); min-height: 872px">
-          <div class="sa-page-banner-des">
+      <div class="sa-main-slider-item" style="overflow: hidden;">
+        <div class="sa-main-slider-bg" style="background-image:url(assets/images/sa-banner-page-2-img.png); min-height: 872px">
+          <div class="sa-main-slider-des">
             <div class="container">
               <div class="row">
                 <div class="col-sm-12">
-                  <div class="sa-banner-cam">
-                    <div class="sa-banner-cam-inner clearfix">
-                      <div class="sa-banner-cam-img">
+                  <div class="sa-main-slider-cam">
+                    <div class="sa-main-slider-cam-inner clearfix">
+                      <div class="sa-main-slider-cam-img">
                         <img src="assets/images/sa-banner-cam-img.png">
                       </div>
-                      <div class="sa-banner-cam-des">
+                      <div class="sa-main-slider-cam-des">
                         <span>Actionaid</span>
                         <strong>Clean South Crete</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem<br> ipsum dolor sit amet, consectetur adipiscing elit. </p>
@@ -183,13 +183,13 @@
           </div>
         </div>
       </div>
-      <div class="sa-page-banner-controller" style="overflow: hidden;">
-        <div class="sa-page-banner-bg" style="background-image:url(assets/images/sa-banner-page-1-img.png); min-height: 872px">
-          <div class="sa-page-banner-des">
+      <div class="sa-main-slider-item" style="overflow: hidden;">
+        <div class="sa-main-slider-bg" style="background-image:url(assets/images/sa-banner-page-1-img.png); min-height: 872px">
+          <div class="sa-main-slider-des">
             <div class="container">
               <div class="row">
                 <div class="col-sm-12">
-                  <div class="sa-page-banner-des-inner">
+                  <div class="sa-main-slider-des-inner">
                     <strong>The Interface between <br><span class="bsn"><span>Business</span></span> and <span class="scl"><span>Social</span></span> Problems</strong>
                     <a href="#">CREATE ACCOUNT</a>
                   </div>
@@ -199,18 +199,18 @@
           </div>
         </div>
       </div>
-      <div class="sa-page-banner-controller" style="overflow: hidden;">
-        <div class="sa-page-banner-bg" style="background-image:url(assets/images/sa-banner-page-2-img.png); min-height: 872px">
-          <div class="sa-page-banner-des">
+      <div class="sa-main-slider-item" style="overflow: hidden;">
+        <div class="sa-main-slider-bg" style="background-image:url(assets/images/sa-banner-page-2-img.png); min-height: 872px">
+          <div class="sa-main-slider-des">
             <div class="container">
               <div class="row">
                 <div class="col-sm-12">
-                  <div class="sa-banner-cam">
-                    <div class="sa-banner-cam-inner clearfix">
-                      <div class="sa-banner-cam-img">
+                  <div class="sa-main-slider-cam">
+                    <div class="sa-main-slider-cam-inner clearfix">
+                      <div class="sa-main-slider-cam-img">
                         <img src="assets/images/sa-banner-cam-img.png">
                       </div>
-                      <div class="sa-banner-cam-des">
+                      <div class="sa-main-slider-cam-des">
                         <span>Actionaid</span>
                         <strong>Clean South Crete</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem<br> ipsum dolor sit amet, consectetur adipiscing elit. </p>
@@ -468,13 +468,13 @@
   <div class="container-xs">
     <div class="row">
       <div class="col-sm-12">
-        <div class="sa-testimonial-slider">
-          <div class="sa-testimonial-section-inner">
-            <div class="sa-testimonial-sec-top">
-              <h4>Testimonials</h4>
-              <p>Here’re what our clients have to say about our services</p>
-            </div>
-            <div class="sa-testimonial-sec-wrap clearfix">
+        <div class="sa-testimonial-sec-top">
+          <h4>Testimonials</h4>
+          <p>Here’re what our clients have to say about our services</p>
+        </div>
+        <div class="sa-testimonial-section-wrap">
+          <div class="sa-testimonial-slider">
+            <div class="sa-testimonial-section-inner">
               <div class="sa-testimonial-sec-profile">
                 <img src="assets/images/sa-testimonial-profile.png">
               </div>
@@ -486,13 +486,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="sa-testimonial-section-inner">
-            <div class="sa-testimonial-sec-top">
-              <h4>Testimonials</h4>
-              <p>Here’re what our clients have to say about our services</p>
-            </div>
-            <div class="sa-testimonial-sec-wrap clearfix">
+            <div class="sa-testimonial-section-inner">
               <div class="sa-testimonial-sec-profile">
                 <img src="assets/images/sa-testimonial-profile.png">
               </div>
@@ -504,13 +498,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="sa-testimonial-section-inner">
-            <div class="sa-testimonial-sec-top">
-              <h4>Testimonials</h4>
-              <p>Here’re what our clients have to say about our services</p>
-            </div>
-            <div class="sa-testimonial-sec-wrap clearfix">
+            <div class="sa-testimonial-section-inner">
               <div class="sa-testimonial-sec-profile">
                 <img src="assets/images/sa-testimonial-profile.png">
               </div>
@@ -540,14 +528,24 @@
         <div class="sa-companies-sec-inner">
           <h4>Companies that use Social Assets</h4>
           <div class="sa-company-name">
-            <ul class="ulc sa-company-name-slide">
-              <li><a href="#"><img src="assets/images/sa-nokia.png"></a></li>
-              <li><a href="#"><img src="assets/images/sa-cocacola.png"></a></li>
-              <li><a href="#"><img src="assets/images/sa-accenture.png"></a></li>
-              <li><a href="#"><img src="assets/images/sa-nestle.png"></a></li>
-              <li><a href="#"><img src="assets/images/sa-nokia.png"></a></li>
-              <li><a href="#"><img src="assets/images/sa-accenture.png"></a></li>
-            </ul>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-nokia.png"></i>
+            </div>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-cocacola.png"></i>
+            </div>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-accenture.png"></i>
+            </div>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-nestle.png"></i>
+            </div>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-nokia.png"></i>
+            </div>
+            <div class="sa-copany-name-slider-item">
+              <i><img src="assets/images/sa-accenture.png"></i>
+            </div>
           </div>
         </div>
       </div>
