menu responsive done

--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -107,7 +107,7 @@
                 </div>
               </div>              
             </div>
-            <div class="humberger-menu">
+            <div class="humberger-menu humberger-menu-xlg">
               <ul class="clearfix ulc">
                 <li><a href="#">Humanity</a></li>
                 <li><a href="#">Animals</a></li>
@@ -131,6 +131,81 @@
                 </div>
               </div>
             </div>
+
+
+            <!-- 
+              If you want logged navbar. please use the class on '.humberger-menu .humberger-menu-xs  .logged-menu'
+             -->
+            <div class="humberger-menu humberger-menu-xs clearfix">
+              <div class="humberger-menu-items clearfix">
+                <ul class="clearfix ulc xs-logout-inner-menu">
+                  <li><a href="#">For NGOs</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">For Businesses</a>
+                    <ul class="sub-menu">
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Campaigns</a></li>
+                </ul>
+                <ul class="clearfix ulc xs-logged-inner-menu">
+                  <li><a href="#">How it Works</a></li>
+                  <li><a href="#">Support a Campaign</a></li>
+                </ul>
+                <ul class="clearfix ulc">
+                  <li><a href="#">Humanity</a></li>
+                  <li><a href="#">Animals</a></li>
+                  <li><a href="#">Environment</a></li>
+                  <li><a href="#">Health</a></li>
+                  <li><a href="#">Education</a></li>
+                </ul>
+                <ul class="clearfix ulc">
+                  <li><a href="#">What We Do</a></li>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+              <div class="xs-menu-footer clearfix">
+                <div class="xs-login-area">
+                  <h6>Login</h6>
+                  <div>
+                    <a href="#">For <strong>NGOs</strong></a>
+                    <a href="#">For <strong>USERs</strong></a>
+                  </div>
+                </div>
+                <div class="xs-hdr-login-profile">
+                  <div class="hdr-login-profile">
+                    <div>
+                      <div class="hdr-login-profile-img">
+                        <img src="assets/images/hdr-login-profile-img.png">
+                      </div>
+                      <strong>Georgio</strong>
+                    </div>
+                    <ul class="ulc clearfix">
+                      <li><a href="#">My Contributions</a></li>
+                      <li><a href="#">My Profile</a></li>
+                      <li>
+                        <i class="fas fa-sign-out-alt"></i>
+                        <a href="#">Log out</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="languages-area">
+                  <label>Languages:</label>
+                  <div class="site-lang-holder clearfix">
+                    <div class="site-lang">
+                      <a href="#" class="active">En <span class="ede-down-angle"></span></a>
+                      <a href="#">Gr</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
