main cat hover done

--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -154,7 +154,7 @@
               <ul class="ulc clearfix">
                 <li>
                   <div class="campaigns-main-cat-item">
-                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/about-story-bg-3.png);">
+                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/main-cat-img-01.png);">
                       <h6>Environment <br>Campaigns</h6>
                       <a class="overlay-link" href="#"></a>
                     </div>
@@ -162,15 +162,15 @@
                 </li>
                 <li>
                   <div class="campaigns-main-cat-item">
-                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/about-story-bg-3.png);">
+                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/main-cat-img-02.png);">
                       <h6>Animal Planet <br>Campaigns</h6>
                       <a class="overlay-link" href="#"></a>
                     </div>
                   </div>
                 </li>
-                <li>
+                <li class="cat-active">
                   <div class="campaigns-main-cat-item">
-                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/about-story-bg-3.png);">
+                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/main-cat-img-03.png);">
                       <h6>Human <br>Campaigns</h6>
                       <a class="overlay-link" href="#"></a>
                     </div>
@@ -178,7 +178,7 @@
                 </li>
                 <li>
                   <div class="campaigns-main-cat-item">
-                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/about-story-bg-3.png);">
+                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/main-cat-img-04.png);">
                       <h6>Health <br>Campaigns</h6>
                       <a class="overlay-link" href="#"></a>
                     </div>
@@ -186,7 +186,7 @@
                 </li>
                 <li>
                   <div class="campaigns-main-cat-item">
-                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/about-story-bg-3.png);">
+                    <div class="campaigns-main-cat-bg" style="background: url(assets/images/main-cat-img-05.png);">
                       <h6>Education <br>Campaigns</h6>
                       <a class="overlay-link" href="#"></a>
                     </div>
