content-center-cntlr class remove

--- a/themes/socialasset/b_business-profile-01-my-account.html
+++ b/themes/socialasset/b_business-profile-01-my-account.html
@@ -139,7 +139,7 @@
   </div>
 </header>
 
-<div class="content-center-cntlr gray-bg">
+<div class="gray-bg">
   <section class="business-profile-sec">
     <div class="container">
         <div class="row">
