packery plugin add

--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -136,7 +136,7 @@
             <!-- 
               If you want logged navbar. please use the class on '.humberger-menu .humberger-menu-xs  .logged-menu'
              -->
-            <div class="humberger-menu humberger-menu-xs clearfix">
+            <div class="humberger-menu humberger-menu-xs logged-menu clearfix">
               <div class="humberger-menu-items clearfix">
                 <ul class="clearfix ulc xs-logout-inner-menu">
                   <li><a href="#">For NGOs</a></li>
