--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -882,6 +882,7 @@
 <script src="assets/js/nav.js"></script>
 <script src="assets/js/jquery-ui.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/packery.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
