--- a/themes/socialasset/b_user-profile-02-contributions.html
+++ b/themes/socialasset/b_user-profile-02-contributions.html
@@ -164,13 +164,13 @@
                           <tr>
                             <th><span>Date </span></th>
                             <th><span> Category</span></th>
-                            <th><span>Campaign</span></th>
+                            <th id="itemSort"><span>Campaign</span></th>
                             <th><span>Status</span></th>
                             <th><span>NGO</span></th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr>
+                        <tbody class="mixContainer">
+                          <tr class="mix" data-price="90" data-title="B" data-place="K">
                             <td>
                               <div class="tbl-td">
                                 <strong>Date</strong>
@@ -212,7 +212,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr>
+                          <tr class="mix" data-price="80" data-title="A" data-place="L">
                             <td>
                               <div class="tbl-td">
                                 <strong>Date</strong>
@@ -233,7 +233,7 @@
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
                                   <div class="tbl-campaign-des-inr">
-                                    <strong>The miracle recovery plan for our planet</strong>
+                                    <strong>The lorem recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
                                 </div>
@@ -254,7 +254,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr>
+                          <tr class="mix" data-price="70" data-title="c" data-place="A">
                             <td>
                               <div class="tbl-td">
                                 <strong>Date</strong>
@@ -275,7 +275,7 @@
                                     <img src="assets/images/tbl-campaign-img.png">
                                   </div>
                                   <div class="tbl-campaign-des-inr">
-                                    <strong>The miracle recovery plan for our planet</strong>
+                                    <strong>The assor recovery plan for our planet</strong>
                                     <p>Traumatic events can create persistent mental and physical stress. We have 6 year …</p>
                                   </div>
                                 </div>
@@ -329,6 +329,7 @@
 <script src="assets/js/nav.js"></script>
 <script src="assets/js/jquery-ui.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/mixitup.min.js"></script>
 <script src="assets/js/account.js"></script>
 <script src="assets/js/main.js"></script>
 
