user-campaign-list-page  responsive done

--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -207,7 +207,7 @@
                 <div class="campaigns-slect-filters-rgt">
                   <div class="sa-selctpicker-ctlr">
                     <label>Sort by</label>
-                    <select class="selectpicker" data-size="7" data-live-search="true">
+                    <select class="selectpicker" data-size="7">
                         <option selected="selected">Trending</option>
                         <option>Trending 1</option>
                         <option>Trending 2</option>
