--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -513,9 +513,8 @@
 
                 </div>
               </li>
-              <li class="campaigns-list-item-wrp">
+              <li class="campaigns-list-item-wrp only-des">
                 <div class="campaigns-list-item">
-                 <!--  <div class="campaigns-item-img" style="background: url(assets/images/user-campaign-list-img-02.png);"></div> -->
                   <div class="campaigns-item-des">
                     <div class="campaigns-item-des-inr">
                       <div class="campaigns-item-cat-name">
