ngo-preview-campaign

--- a/themes/socialasset/ngo-preview-campaign.html
+++ b/themes/socialasset/ngo-preview-campaign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>User Campaign Page</title> 
+	<title>Ngo Preview Campaign</title> 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,118 +32,22 @@
 
 </head>
 <body>
-<header class="header hdr-has-shadow">
-  <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="header-inr clearfix">
-            <div class="hdr-lft">
-              <div class="logo">
-                <a href="#"><img src="assets/images/logo.png"></a>
-              </div>
-            </div>
-            <!-- 
-              If you want logged navbar. please use the class on '.hdr-rgt .logged-menu'
-             -->
-            <div class="hdr-rgt logged-menu">
-              <nav class="main-nav logout-main-nav">
-                <div class="main-nav-menu">
-                  <ul class="clearfix ulc">
-                    <li><a href="#">What We Do</a></li>
-                    <li class="current-menu-item"><a href="#">For NGOs</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">For Businesses</a>
-                      <ul class="sub-menu">
-                        <li><a href="#">sub menu item</a></li>
-                        <li><a href="#">sub menu item</a></li>
-                        <li><a href="#">sub menu item</a></li>
-                        <li><a href="#">sub menu item</a></li>
-                        <li><a href="#">sub menu item</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Campaigns</a></li>
-                  </ul>
-                </div>
-                <div class="hdr-btns clearfix">
-                  <div class="login-btn">
-                    <button>LOGIN</button>
-                    <ul class="ulc">
-                      <li><a href="#">For <strong>NGOs</strong></a></li>
-                      <li><a href="#">For <strong>USERs</strong></a></li>
-                    </ul>
-                  </div>
-                  <button class="campaign-btn">Start a Campaign</button>
-                </div>
-              </nav>
-              <nav class="main-nav logged-main-nav">
-                <div class="main-nav-menu">
-                  <ul class="clearfix ulc">
-                    <li><a href="#">What We Do</a></li>
-                    <li class="current-menu-item"><a href="#">How it Works</a></li>
-                    <li><a href="#">Support a Campaign</a></li>
-                  </ul>
-                </div>
-                <div class="hdr-login-profile">
-                  <div class="hdr-login-profile-img">
-                    <img src="assets/images/hdr-login-profile-img.png">
-                  </div>
-                  <strong>Georgio</strong>
-                  <ul class="ulc clearfix">
-                    <li><a href="#">My Contributions</a></li>
-                    <li><a href="#">My Profile</a></li>
-                    <li>
-                      <i class="fas fa-sign-out-alt"></i>
-                      <a href="#">Log out</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-              
-              <div class="humberger-menu-btn">
-                <strong>MENU</strong>
-                <div class="humberger-menu-btn-lines">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </div>
-              </div>
-              
-            </div>
-            <div class="humberger-menu">
-              <ul class="clearfix ulc">
-                <li><a href="#">Humanity</a></li>
-                <li><a href="#">Animals</a></li>
-                <li><a href="#">Environment</a></li>
-                <li><a href="#">Health</a></li>
-                <li><a href="#">Education</a></li>
-              </ul>
-              <ul class="clearfix ulc">
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-              <div class="languages-area">
-                <label>Languages:</label>
-                <div class="site-lang-holder clearfix">
-                  <div class="site-lang">
-                    <a href="#" class="active">En <span class="ede-down-angle"></span></a>
-                    <a href="#">Gr</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
-</header>
 
 
-<section class="miracle-plan-sec">
+<section class="miracle-plan-sec" id="ngo-preview-sec">
   <div class="container">
     <div class="row">
       <div class="col-12">
+        <div class="ngo-preview-top">
+
+          <div class="ngo-alert-box alert alert-info fade in alert-dismissible show">
+           <button class="close" data-dismiss="alert"><img src="assets/images/alart-close.png" alt=""></button>    
+            <strong>The Status of this Campaign is PENDING!</strong>
+          </div>
+
+          <a class="ngo-preview-back" href="#"><span><i class="fas fa-arrow-left"></i></span>Back to your panel</a>
+
+        </div>
         <div class="miracle-plan-innr clearfix">
           <div class="miracle-plan-slider-wrp">
             <div class="miraclePlanBigSlider">
@@ -254,71 +158,6 @@
   </div>    
 </section>
 
-
-<footer class="footer-wrp">
-  <div class="ftr-main">
-    <div class="container-lg">
-      <div class="row">
-        <div class="col-md-6 col-sm-12">
-          <div class="ftr-col-1">
-            <h5>Get in Touch</h5>
-            <ul class="ulc">
-              <li>
-                <a href="#">30 Arch. Kyprianos Str. <br>3036 Limassol</a>
-              </li>
-              <li>
-                <a href="#">T. &nbsp; 2500 2500</a>
-              </li>
-              <li>
-                <a href="#">E. info@mymentor.com</a>
-              </li>
-            </ul> 
-            <div class="ftr-social">
-              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            </div>        
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-12 clearfix">
-          <div class="ftr-col-2">
-            <h5>Subscribe to our Newsletter</h5>
-            <p>By subscribing here, you will receive our newsletters. You can unsubscribe at any time by following the link at the bottom of each newsletter.</p>
-            <div class="nl-from-wrp">
-              <form action="">
-                <input type="email" placeholder="Type your email here">
-                <button><i class="fas fa-long-arrow-alt-right"></i></button>
-              </form>
-            </div>
-            <ul class="ulc clearfix">
-              <li><a href="#">PRIVACY POLICY</a></li>
-              <li><a href="#">TERMS OF USE</a></li>
-              <li><a href="#">COOKIES POLICY</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>   
-  </div>
-  <div class="ftr-btm">
-    <div class="container-lg">
-      <div class="row">
-        <div class="col-6">
-          <div class="ftr-btm-lft">
-            <span>COPYRIGHT ©2019 </span>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="ftr-btm-rgt">
-            <a href="#">
-              <span class="creation-with-txt">Creation with <i class="fas fa-heart"></i> by </span>
-              <img src="assets/images/wf-logo-black.png">
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>   
-  </div>  
-</footer>
 
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
