--- a/themes/socialasset/ngo-preview-campaign.html
+++ b/themes/socialasset/ngo-preview-campaign.html
@@ -45,7 +45,7 @@
             <strong>The Status of this Campaign is PENDING!</strong>
           </div>
 
-          <a class="ngo-preview-back" href="#"><span><i class="fas fa-arrow-left"></i></span>Back to your panel</a>
+          <a class="ngo-preview-back" onclick="window.history.back()" href="#"><span><i class="fas fa-arrow-left"></i></span>Back to your panel</a>
 
         </div>
         <div class="miracle-plan-innr clearfix">
