--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -243,6 +243,7 @@
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr">
+              <span class="sr-only-txt"></span>
               <h2>The Interface between  <br><span class="bus">Business</span> and <span class="soc">Social</span> Problems</h2>
               <a href="#">CREATE ACCOUNT</a>
             </div>
@@ -279,6 +280,7 @@
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr">
+              <span class="sr-only-txt"></span>
               <h2>The Interface between <span class="bus">Business</span> and <span class="soc">Social</span> Problems</h2>
               <a href="#">CREATE ACCOUNT</a>
             </div>
